# nimble-client-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
src/: .gitignore  CMakeLists.txt
src/examples/: CMakeLists.txt  deps.toml  main.c
src/include/nimble-client/: client.h  connect_response.h  connection_quality.h  debug.h  download_state_part.h  download_state_response.h  game_state.h  game_step_response.h  incoming.h  incoming_api.h  join_game_participants_full.h  join_game_response.h  network_realizer.h  outgoing.h  pong.h  prepare_header.h  receive_transport.h  send_steps.h  utils.h
src/lib/: CMakeLists.txt  client.c  client_utils.c  connect_response.c  connection_quality.c  debug.c  download_state_part.c  download_state_response.c  game_state.c  game_step_response.c  incoming.c  incoming_api.c  join_game_participants_full.c  join_game_response.c  network_realizer.c  outgoing.c  pong.c  prepare_header.c  receive_transport.c  send_steps.c
